--- a/JetBrainsActivation/jetbrainsactivation.ui
+++ b/JetBrainsActivation/jetbrainsactivation.ui
@@ -6,18 +6,18 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>280</width>
-    <height>362</height>
+    <width>311</width>
+    <height>230</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>JetBrainsActivation</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="Title">
     <property name="geometry">
      <rect>
-      <x>50</x>
+      <x>60</x>
       <y>0</y>
       <width>211</width>
       <height>21</height>
@@ -32,13 +32,130 @@
      <string>JetBrainsActivation</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="CLion">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>30</y>
+      <width>93</width>
+      <height>29</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>CLion</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="DataGrip">
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>30</y>
+      <width>93</width>
+      <height>29</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>DataGrip</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="GoLand">
+    <property name="geometry">
+     <rect>
+      <x>210</x>
+      <y>30</y>
+      <width>93</width>
+      <height>29</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>GoLand</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="IDEA">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>70</y>
+      <width>93</width>
+      <height>29</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>IDEA</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="PhpStorm">
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>70</y>
+      <width>93</width>
+      <height>29</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>PhpStorm</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="PyCharm">
+    <property name="geometry">
+     <rect>
+      <x>210</x>
+      <y>70</y>
+      <width>93</width>
+      <height>29</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>PyCharm</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="WebStorm">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>110</y>
+      <width>93</width>
+      <height>29</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>WebStorm</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="warning1">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>140</y>
+      <width>261</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Warning:If you download these app</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="warning2">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>160</y>
+      <width>291</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>from toolbox, it can't activate correctly.</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>280</width>
+     <width>311</width>
      <height>26</height>
     </rect>
    </property>
